feat(swagger): get romantic event by public token
